--- a/CODE-ALONG-HEADER/styles/larger.css
+++ b/CODE-ALONG-HEADER/styles/larger.css
@@ -13,4 +13,17 @@
         display: none;
     }
     
+    .navigation {
+        display: block;
+        border-bottom: solid 1px #eee;
+    }
+
+    .navigation ul {
+        display: flex;
+    }
+
+    .navigation a {
+        border: none;
+    }
+
 }
