--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 38rem) {
 
     header, main, nav, footer {
-        max-width: 900px;
+        max-width: 1200px;
         margin: 0 auto;
     }
 
@@ -24,5 +24,22 @@
 
     .navigation a {
         border: none;
+    }
+
+    .grid-layout {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+    }
+
+    .s3 {
+        grid-column: 1 / 3;
+    }
+    
+    .course-cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 10px;
+        margin-bottom: 0;
     }
 }
