--- a/styles/small.css
+++ b/styles/small.css
@@ -198,7 +198,7 @@ footer div {
 
 .course {
     border: 1px solid #ccc;
-    margin-bottom: 10px;
+    margin: 10px;
     padding-left: 1rem;
     border-radius: 10px;
 }
