--- a/styles/larger.css
+++ b/styles/larger.css
@@ -26,6 +26,10 @@
         border: none;
     }
 
+    .social {
+        margin-top: 8px;
+    }
+
     .grid-layout {
         display: grid;
         grid-template-columns: 1fr 1fr;
