--- a/styles/small.css
+++ b/styles/small.css
@@ -140,7 +140,7 @@ footer div {
     display: flex;
     justify-content: center;
     column-gap: 8px;
-    margin-top: 0;
+    margin-top: 16px;
 }
 
 .social a {
