--- a/styles/prophets.css
+++ b/styles/prophets.css
@@ -1,19 +1,54 @@
-#cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    gap: 1rem;
+/****************** SITE WIDE ******************/
+
+* {
+    font-family: "Josefin Sans", sans-serif;
+    box-sizing: border-box;
+}
+
+/****************** MAIN ******************/
+
+h1 {
+    background-color: rgb(0, 128, 0);
+    color: rgb(255, 255, 255);
     padding: 1rem;
+    text-align: center;
+    margin: 0 auto;
+}
+
+h2 {
+	margin: 1rem;
 }
 
 section {
-    border: 2px solid #222;
+    border: 1px solid #000000;
     padding: 1rem;
     border-radius: 8px;
-    background: #f8f8f8;
+    background: #c2ffeb;
     text-align: center;
 }
 
+p {
+    margin: 0.5rem;
+}
+
+img {
+    width: 305px;
+    height: 375px;
+    margin-top: 0.3rem;
+}
+
+#cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
+    padding: 1rem;
+}
+
+/****************** FOOTER ******************/
+
 footer {
-    padding: 0;
+    background-color: rgb(0, 128, 0);
+    color: rgb(255, 255, 255);
+    padding: 1rem;
     text-align: center;
 }
