--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -88,9 +88,10 @@ header span {
 /****************** MAIN ******************/
 
 h1 {
-    margin-left: 10px;
     margin: 0 auto;
-    color: #3D405B;
+    padding: 1rem;
+    background-color: #3D405B;
+    color: #ccc;
     text-align: center;
 }
 
@@ -98,8 +99,7 @@ section h2{
     text-align: center;
     padding: 12px 0 8px 0;
     margin: 0;
-    background-color: #3D405B;
-    color: #ddd;
+    color:#3D405B;
 }
 
 section p {
@@ -208,7 +208,7 @@ padding: 0;
 }
 
 .member-card img {
-    width: 100%;
+    width: 50%;
     height: auto;
     border: none;
     padding: 0;
@@ -229,6 +229,7 @@ padding: 0;
     background-color: #3D405B;
     color: #ccc;
     padding: 1rem;
+    border: 1px solid #3D405B;
     border-radius: 10px;
     width: 4rem;
     height: 4rem;
