--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -15,11 +15,12 @@ Deep Slate Blue #3D405B
 
 header {
     display: grid;
-    grid-template-columns: 80px auto;
+    grid-template-columns: 80px auto 44px;
     align-items: end;
-    padding: 5px 0 5px 10px;
+    padding: 5px 10px 5px 10px;
     column-gap: 8px;
     border-bottom: solid 1px #ddd;
+    align-items: center;
 }
 
 header img {
