--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -298,20 +298,13 @@ padding: 0;
     margin: 0 auto;
 }
 
-.home {
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    gap: 1rem;
-    padding: 0;
-}
-
 .title h2 {
     background-color: #3D405B;
     color: #eee;
-    font-size: 1.2rem;
-    font-weight: 200;
+    font-size: 1.5rem;
+    font-weight: 300;
     border-radius: 10px 10px 0 0;
-    padding: 0.5rem;margin: 0;
+    padding: 1rem;
 }
 
 .title p {
@@ -320,19 +313,30 @@ padding: 0;
     overflow: hidden;
 }
 
+section {
+    margin: 1rem;
+    padding: 0;
+}
+
 .events,
-.current-weather,
+.weather,
 .weather-forecast,
 .spotlights {
     background-color: #eee;
     border-radius: 10px;
-    margin: 0 auto;
 }
 
-.current-weather p {
+.weather-info {
     text-align: center;
-    font-size: 1rem;
     padding: 0.4rem;
+}
+
+#weather-icon {
+    display: block;
+    margin: 0 auto;
+    width: 80px;
+    text-align: center;
+    border: none;
 }
 
 #forecast {
@@ -342,9 +346,10 @@ padding: 0;
 }
 
 #forecast li {
-    padding: 0.4rem 0;
+    padding: 0.4rem;
+    margin: 1rem;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 #spotlight-container {
@@ -358,13 +363,14 @@ padding: 0;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 1rem;
+    padding: 0;
     text-align: center;
+    margin: 0 auto;
 }
 
 .spotlight-card img {
-    max-width: 120px;
-    margin: 0 auto 0.5rem;
+    max-width: 100px;
+    margin: 0 auto;
     display: block;
 }
 
@@ -381,8 +387,8 @@ padding: 0;
 }
 
 .title p,
-.current-weather p,
+.weather p,
 .weather-forecast ul {
-    padding: 1.5rem;
-    margin: 0;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
