--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -303,6 +303,7 @@ padding: 0;
     color: #eee;
     font-size: 1.5rem;
     font-weight: 300;
+    border-radius: 10px 10px 0 0;
     padding: 1rem;
 }
 
