--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -530,7 +530,7 @@ dialog {
 }
 
 dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #1f2933(0, 0, 0, 0.5);
 }
 
 dialog h3 {
