--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fff0f0;
+    background-color: #eaecff;
     color: #000000;
     font-family: "Roboto", sans-serif;
     margin: 0;
@@ -11,14 +11,14 @@ div {
     margin-bottom: 2rem;
     padding: 1.5rem;
     background: #ffffff;
-    border-left: 6px solid #48005e;
+    border-left: 6px solid #00254D;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
 h1,h2 {
     font-family: "Comfortaa", cursive;
-    color: #e4a842;
+    color: #0baa00;
     margin-top: 0;
 }
 
@@ -36,7 +36,7 @@ p {
 }
 
 .accent {
-    color: #48005e;
+    color: #00254D;
     font-weight: bold;
     margin: 0;
     padding: 0;
@@ -55,14 +55,14 @@ figure figcaption {
     padding: 0.3rem 0.5rem;
     border-radius: 5px;
     font-family: "Comfortaa", cursive;
-    color: #48005e;
+    color: #00254D;
 }
 
 figure {
     margin: 0;
     padding: 1.5rem;
     background: #ffffff;
-    border-left: 6px solid #48005e;
+    border-left: 6px solid #00254D;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
