Site Plan completed

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,3 +1,17 @@
+/*
+Color Schema
+
+Headings: #0baa00
+Paragraphs: #000000
+Background: #ffffff
+Accents: #00254d
+
+Typography
+
+Headings: Comfortaa
+Body: Roboto
+*/
+
 body {
     background-color: #eaecff;
     color: #000000;
