--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -173,7 +173,7 @@ section {
 }
 
 #membersContainer {
-    margin-top: 1rem;
+    margin: 1rem;
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -282,9 +282,10 @@ padding: 0;
 
 .home {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 4fr 1fr 1fr;
     gap: 1rem;
     padding: 0;
+    margin: 0 1rem;
 }
 
 .hero-image {
@@ -303,7 +304,7 @@ padding: 0;
 }
 
 .title p {
-    padding: 2rem;
+    padding: 1rem;
     margin: 0 auto;
 }
 
@@ -318,6 +319,10 @@ padding: 0;
 .spotlights {
     background-color: #eee;
     border-radius: 10px;
+}
+
+.spotlights {
+    margin: 0 1rem 1rem 1rem;
 }
 
 .weather-info {
@@ -603,12 +608,11 @@ section p {
 /******************* DISCOVER *******************/
 
 #places div {
-    margin: 1rem 8px;
-    border: 1px solid #1f2933;
+    margin: 1rem 1rem 1rem 1rem;
+    border: 0.1px solid #9ca3af;
     background-color: #eee;
     border-radius: 8px;
     overflow: hidden;
-
     display: grid;
     grid-template-areas: 
     "name"
@@ -619,35 +623,38 @@ section p {
 }
 
 #places div h2{
-    margin: 1rem 10px;
+    margin: 1rem;
     text-align: center;
     grid-area: name;
     margin-bottom: 0;
 }
 
-#places div figure img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+#places div figure{
     grid-area: photograph;
 }
 
+#places div img {
+    width: 100%;
+}
+
 #places div p {
-    margin: 1rem 10px;
+    margin: 1rem;
     text-align: center;
     grid-area: description;
 
 }
 
 #places div address {
-    margin: 1rem 10px;
+    margin: 1rem;
     text-align: center;
     grid-area: location;
 }
 
 #places div button {
-    margin: 1rem;
-    padding: 1rem;
+    margin: 0.5rem auto;
+    padding: 0.5rem;
+    width: 50%;
+    border-radius: 8px;
     background-color: #3D405B;
     color: #ccc;
     grid-area: button;
@@ -659,7 +666,9 @@ section p {
     background-color: #3D405B;
     color: white;
     padding: 1rem;
-    margin: 1rem 0;
+    width: 70%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
