--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -86,12 +86,12 @@
 
     .member-card:hover {
         transform: translateY(-8px);
-        box-shadow: 0 12px 25px rgba(0, 0, 0, 0.18);
+        box-shadow: 0 12px 25px #0000002e;
     }
 
     .spotlight-card:hover {
         transform: translateY(-8px);
-        box-shadow: 0 12px 25px rgba(0, 0, 0, 0.18);
+        box-shadow: 0 12px 25px #0000002e;
     }
 
     /******************* LIST *******************/
