--- a/finalproject/styles/small.css
+++ b/finalproject/styles/small.css
@@ -406,7 +406,7 @@ section {
 
 @media (min-width: 900px) {
     .join-main {
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1fr;
         align-items: start;
     }
 }
@@ -461,7 +461,7 @@ section {
 
 .join-form input[type="submit"] {
     margin-top: 12px;
-    background-color: #3D405B;
+    background-color: #054d00;
     color: #ffffff;
     font-size: 18px;
     font-weight: bold;
@@ -583,7 +583,8 @@ button:focus {
 }
 
 section p {
-    padding: 0;
+    padding: 1rem;
+    text-align: center;
 }
 
 .submitted-info {
