--- a/finalproject/styles/large.css
+++ b/finalproject/styles/large.css
@@ -8,7 +8,10 @@
     }
 
     img {
-        width: 100%;
+        display: block;
+        width: 25%;
+        align-items: center;
+        margin: 0 auto;
     }
 
     header {
