--- a/finalproject/styles/small.css
+++ b/finalproject/styles/small.css
@@ -725,3 +725,50 @@ section p {
     font-size: 1.2rem;
     cursor: pointer;
 }
+
+/******** SOUVENIRS ********/
+
+#souvenirs div {
+    margin: 1rem 1rem 1rem 1rem;
+    border: 0.1px solid #9ca3af;
+    background-color: #eee;
+    border-radius: 8px;
+    overflow: hidden;
+    display: grid;
+    grid-template-areas:
+        "name"
+        "photograph"
+        "description"
+        "price";
+}
+
+#souvenirs div h2 {
+    margin: 1rem;
+    text-align: center;
+    grid-area: name;
+    margin-bottom: 0;
+}
+
+#souvenirs div figure {
+    grid-area: photograph;
+}
+
+#souvenirs div img {
+    width: 100%;
+}
+
+#souvenirs div p {
+    margin: 1rem;
+    text-align: center;
+    grid-area: description;
+    font-size: 1.2rem;
+    padding: 0;
+}
+
+#souvenirs div .price {
+    margin: 0 auto;
+    padding-bottom: 1rem;
+    text-align: center;
+    font-size: 1.5rem;
+    grid-area: price;
+}
